----------
v4.3.0-git
----------

[jan] Improve priority display in basic view.
[jan] Display task list background color in basic view.
[jan] Import snooze information from iCalendar alarms.
[jan] Import iCalendar 2.0 alarms.
[jan] Import and export recurrence rules to iCalendar.
[jan] Return ETags with browse() API method.


------
v4.2.2
------

[mjr] Fix missing startdate field for recurring tasks synchronized via
      ActiveSync (Bug #13636).
[jan] Pass current start date of recurring tasks to dynamic interface.
[jan] Fix setting task list name for external tasks.
[jan] Fix link to create sub-task from a task view.
[jan] Fix listing of recurring tasks with start dates.
[mjr] Add missing categories to EAS tasks.
[jan] Fix sidebar display of system task lists in basic view.
[jan] Fix retrieving individual tasks via WebDAV.


------
v4.2.1
------

[jan] Don't include external tasks with WebDAV task list.
[jan] Fix displayed CalDAV URLs for shared task lists (Bug #12380).
[mjr] Fix remembering auto determined default share (Bug #13360).
[mjr] Add EAS client created shares to the sync_lists preference (Bug #13359).
[mjr] Add missing API support for searchTags API (Bug #13364).
[mjr] Fix detecting task completion when sending task change notifications
      (Alfonso Marín Marín <almarin@um.es>, Bug #13350).


------
v4.2.0
------

[mjr] Fix returning to previously selected tab after task is saved (Bug
      #13308).
[mjr] Fix fatal error when saving a task, only one tasklist exists, and at
      least one SmartList exists.


-----------
v4.2.0beta2
-----------

[jan] Always display system task lists to administrators.
[mjr] Group task fields into tabs on edit form (Request #13228).


-----------
v4.2.0beta1
-----------

[jan] Only use URL rewriting for saving/completing tasks if pretty URLs are
      enabled in the configuration.
[jan] Don't include smart lists in top menu.
[jan] Fix top menu URLs to create new tasks in specific task lists.


------------